--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="off_white">#F0F2F6</color>
     <color name="grey">#AAB3C7</color>
-    <color name="red">#F42A28</color>
-    <color name="light_green">#14A06F</color>
+    <color name="red">#EF5C5B</color>
+    <color name="light_green">#41C395</color>
     <color name="green">#53A063</color>
     <color name="cyan">#37A5C6</color>
     <color name="brown">#716B45</color>
