--- a/app/src/main/res/layout/monster_item.xml
+++ b/app/src/main/res/layout/monster_item.xml
@@ -18,8 +18,8 @@
         android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
+        android:elevation="10dp"
+        app:cardMaxElevation="5dp"
         app:cardPreventCornerOverlap="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
