added ui to monster details and fixed every time loading

--- a/app/src/main/res/layout/fragment_all_monsters.xml
+++ b/app/src/main/res/layout/fragment_all_monsters.xml
@@ -57,7 +57,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-                shimmer:duration="800">
+                shimmer:duration="800"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -97,7 +98,7 @@
                     android:id="@+id/monster_progress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/orange"
+                    app:indicatorColor="@color/orange"
                     android:indeterminate="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:visibility="gone"/>
