--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="brown">#716B45</color>
     <color name="pink">#FFC0CB</color>
     <color name="orange">#FFB000</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
