--- a/app/src/main/res/layout/data_place_holder.xml
+++ b/app/src/main/res/layout/data_place_holder.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/background"
+        android:background="@drawable/data_holder_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/thumbnail2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,7 +29,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/background"
+        android:background="@drawable/data_holder_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
