--- a/app/src/main/res/layout/fragment_monster_details.xml
+++ b/app/src/main/res/layout/fragment_monster_details.xml
@@ -66,17 +66,232 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="160dp"
+        android:background="@drawable/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/type_rc">
+
+        <TextView
+            android:id="@+id/about"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:padding="10dp"
+            android:text="@string/about"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/about_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/about" />
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
+            android:id="@+id/data_placer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="160dp"
-            android:background="@drawable/background"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type_rc">
+            app:layout_constraintTop_toBottomOf="@+id/about">
+
+            <TextView
+                android:id="@+id/brief_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:padding="5dp"
+                android:text="@string/brief"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:text="@string/species"
+                android:textColor="@color/dark_grey"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/brief_tv" />
+
+            <TextView
+                android:id="@+id/species_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="64dp"
+                android:text="@string/species"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/height"
+                android:textColor="@color/dark_grey"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <TextView
+                android:id="@+id/height_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/height"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/species_tv"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight"
+                android:textColor="@color/dark_grey"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintStart_toStartOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+            <TextView
+                android:id="@+id/weight_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="@+id/height_tv"
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="@string/ability"
+                android:textColor="@color/dark_grey"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+            <TextView
+                android:id="@+id/ability_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ability"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView6"
+                app:layout_constraintStart_toStartOf="@+id/weight_tv"
+                app:layout_constraintTop_toTopOf="@+id/textView6" />
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView7"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginStart="32dp"-->
+            <!--                android:text="@string/nature"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="20sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintBottom_toTopOf="@+id/textView8"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/textView6" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView8"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/habitat"-->
+            <!--                app:layout_constraintBottom_toTopOf="@+id/TextView9"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/textView7"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/textView7" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/habitat_tv"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/habitat"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/textView8"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/ability_tv"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/textView8" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/TextView9"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/generation"-->
+            <!--                app:layout_constraintBottom_toTopOf="@+id/textView10"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/textView8"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/textView8" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/generation_tv"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/generation"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/TextView9"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/habitat_tv"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/TextView9" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView10"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/egg_group"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/TextView9"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/TextView9" />-->
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/egg_group_tv"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="@string/egg_group"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/textView10"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/generation_tv"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/textView10" />-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <ImageView
@@ -86,7 +301,8 @@
         android:src="@drawable/poke"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/type_rc" />
+        app:layout_constraintTop_toBottomOf="@+id/type_rc"
+        android:contentDescription="@string/poke_image" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/type_rc"
