--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/off_white"/>
+    <stroke android:color="@color/black" android:width="1dp" android:dashGap="2dp" android:dashWidth="100dp"/>
     <corners android:topRightRadius="50dp" android:topLeftRadius="50dp"/>
 
 </shape>
