--- a/app/src/main/res/layout/fragment_start_up.xml
+++ b/app/src/main/res/layout/fragment_start_up.xml
@@ -7,24 +7,16 @@
     tools:context=".presentation.ui.fragments.StartUpFragment"
     android:background="@color/off_white">
 
-    <ImageView
-        android:id="@+id/poke_img"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/poke"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:indeterminateDrawable="@drawable/progress_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
