--- a/app/src/main/res/layout/fragment_monster_details.xml
+++ b/app/src/main/res/layout/fragment_monster_details.xml
@@ -92,8 +92,10 @@
 
         <ProgressBar
             android:id="@+id/about_progress"
+            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:indeterminateDrawable="@drawable/progress_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
