--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,9 @@
     <color name="brown">#716B45</color>
     <color name="pink">#FFC0CB</color>
     <color name="orange">#FFB000</color>
+    <color name="yellow">#fc3</color>
     <color name="transparent">#00000000</color>
     <color name="blue">#0000FF</color>
+    <color name="semi_transparent">#23000000</color>
 
 </resources>
